About me update

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         				<img class="img-fluid rounded w-100" src="img/new-1.jpg" alt="Ishraq">
         			</div>
         			<div class="col-lg-7" data-aos="slide-left" data-aos-duration="3000">
-        				<h3 class="mb-4">Software Developer</h3>
+        				<h3 class="mb-4">Software Engineer</h3>
   						<!-- About Typewriter start  -->
     					<p id="typewriter"></p>
     					<!-- About Typewriter end -->
