Information update for multiple sections

--- a/index.html
+++ b/index.html
@@ -207,13 +207,13 @@
   							
         				<div class="row mb-3">
         					<div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Ishraq Ahmed Esha</span></h6></div>
-        					<div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">July 04, 1999</span></h6></div>
+        					<div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">July 04</span></h6></div>
         					<div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">Bachelor</span></h6></div>
         					<div class="col-sm-6 py-2"><h6>Experience: <span class="text-secondary">4 Years</span></h6></div>
         					<div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">(+88) 01534741641</span></h6></div>
 							<div class="col-sm-6 py-2"><h6>Alternative Contact: <span class="text-secondary">(+88) 01551079628</span></h6></div>
         					<div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">ishraqahmedbd@gmail.com</span></h6></div>
-        					<div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">House# 31, Road# 3, Shyamoli, Dhaka-1207, Bangladesh</span></h6></div>
+        					<div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">Shyamoli, Dhaka-1207, Bangladesh</span></h6></div>
         				</div>
         				<button class="button-hire m-4" onclick="window.location.href='#contact';">Hire Me</button>
         				<button onclick="alert('This Page is under Development!')" class="btn btn-outline-primary">Learn More</button>
@@ -373,8 +373,21 @@
         				<div class="border-left border-primary pt-2 pl-4 ml-2">
 							<div class="position-relative ex-me mb-4">
                                 <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
+                                <h5 class="font-weight-bold mb-1">Software Engineer, QA</h5>
+                                <p class="mb-2"><strong>Therap (BD) Ltd.</strong> | <small>Oct 2024 - Present</small> | <small>Excellent</small></p>
+								<ul>
+									<li> Perform Exploratory Testing on a regular basis besides Automation Testing.</li>
+									<li> Design Test Procedures, Test Cases, and build a product Testing Strategy that includes Planning, Scheduling, and Monitoring.</li>
+									<li> Focus Testing Efforts as per prioritized features of a project targeting release/deadline.</li>
+									<li> Preparing Software Requirements Specification (SRS) for team modules of Therap Web Application.</li>
+									<li> Feature Understanding and Prepare Test Documents such as Scenario Test Scripts and feature Checklists.</li>
+									<li> Reporting and Maintaining bugs in Bug reporting software such as JIRA.</li>
+								  </ul>
+                            </div>
+							<div class="position-relative ex-me mb-4">
+                                <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
                                 <h5 class="font-weight-bold mb-1">Digital Solutions and Service Intern</h5>
-                                <p class="mb-2"><strong>Service Assurance Management (Technology Divison), Banglalink Digital Communications Ltd.</strong> | <small>Jun 2023 - Present</small> | <small>Excellent</small></p>
+                                <p class="mb-2"><strong>Service Assurance Management (Technology Divison), Banglalink Digital Communications Ltd.</strong> | <small>Jun 2023 - Sep 2023</small> | <small>Excellent</small></p>
 								<ul>
 									<li>Coordinating ongoing activities of crucial lifeline services of Telecom: USSD, SMSC</li>
 									<li> Successfully maintaining operational excellence and 100% availability of the lifeline systems by performing regular 
