--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
        					<p>Support for next gen industry changer or any kind of robotics project which is supported by a mixture of soft and harware with AI power</p>
         				<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
         			</div>
-       				<div class="service-box col-lg-4 col-md-6 text-center mb-5" data-aos="slide-left" data-aos-duration="3000">
+       				<div class="service-box col-lg-4 col-md-6 text-center mb-5" data-aos="slide-down" data-aos-duration="3000">
        					<div class="d-flex align-items-center justify-content-center mb-4">
        						<i class="fa fa-2x fa-database service-icon bg-primary text-white mr-3"></i>
        						<h4 class="font-weight-bold m-0">Database Management</h4>
